--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ decorator==5.1.1
 executing==1.0.0
 Faker==14.2.0
 Flask==2.2.2
+Flask-Admin==1.6.0
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==2.5.1
@@ -25,6 +26,8 @@ jedi==0.18.1
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
+numpy==1.23.3
+pandas==1.4.4
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -35,6 +38,7 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
 python-dateutil==2.8.2
+pytz==2022.2.1
 requests==2.28.1
 simplegeneric==0.8.1
 six==1.16.0
