--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask_Bcrypt==0.7.1
 Flask_DebugToolbar==0.10.1
 Flask_SQLAlchemy==2.3.2
 Flask_WTF==0.14.2
+gunicorn==20.1.0
 requests==2.28.1
 SQLAlchemy==1.2.12
 WTForms==2.2.1
