--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-beautifulsoup4==4.11.1
-Faker==0.9.1
-Flask==1.0.2
-flask_admin==1.6.0
-Flask_Bcrypt==0.7.1
-Flask_DebugToolbar==0.10.1
-Flask_SQLAlchemy==2.3.2
-Flask_WTF==0.14.2
-gunicorn==20.1.0
-requests==2.28.1
-SQLAlchemy==1.2.12
-WTForms==2.2.1
+beautifulsoup4
+Faker
+Flask
+flask_admin
+Flask_Bcrypt
+Flask_DebugToolbar
+Flask_SQLAlchemy
+Flask_WTF
+psycopg2
+gunicorn
+requests
+SQLAlchemy
+WTForms
